# sunray-mower

./: .gitignore  GIT_USAGE.md  README.md
sunray/sunray_py/: .gitignore  .prettierignore  BUTTON_FUNCTIONALITY.md  CONFIG_README.md  PROJECT_STRUCTURE.md  README_ENHANCED_ESCAPE.md  README_TYPESCRIPT.md  TODO.md  __init__.py  advanced_path_planner.py  astar_pathfinding.py  battery.py  build.js  buzzer_example.py  buzzer_feedback.py  config.json  config.json.example  config.py  config_enhanced.json  config_example.json  enhanced_escape_operations.py  events.py  gps_module.py  hardware_manager.py  helper.py  http_server.py  imu.py  integration_example.py  main.py  map.py  mock_hardware.py  motor.py  ntrip_client.py  op.py  path_planner.py  pico_comm.py  pid.py  pyproject.toml  requirements.txt  rtk_gps.py  (+8 more)
sunray/sunray_py/communication/: __init__.py  ble_client.py  can_client.py  comm.py  mqtt_client.py
sunray/sunray_py/docs/: BUZZER_FEEDBACK_DOCUMENTATION.md  ENHANCED_NAVIGATION_INTEGRATION.md  GPS_SAFETY_IMPLEMENTATION.md  MOTOR_CONFIG.md  MOTOR_INTEGRATION.md  README.md  RTK_GPS_SETUP.md  TODO.md  advanced_path_planning.md  web_interface_advanced_planning.md
sunray/sunray_py/docs/analysis/: MOTOR_PID_ANALYSIS.md  PRD_ANALYSE.md
sunray/sunray_py/docs/implementation/: BATTERY_INTEGRATION.md  BUMPER_IMPROVEMENTS.md  ENHANCED_ESCAPE_SYSTEM.md  IMPLEMENTIERUNG.md  PATH_PLANNING.md  SMART_BUMPER_ESCAPE.md
sunray/sunray_py/docs/project/: TODO_PRD.md
sunray/sunray_py/examples/: README.md  __init__.py  advanced_path_planning_demo.py  example_autonomous_mowing.py  integration_example.py
sunray/sunray_py/hardware/: __init__.py  battery.py  hardware_manager.py  motor.py
sunray/sunray_py/lift_detection/: README.md  __init__.py  integration_lift_alternatives.py  lift_detection_alternatives.py
sunray/sunray_py/navigation/: __init__.py  gps_navigation.py
sunray/sunray_py/safety/: __init__.py  gps_safety_manager.py  obstacle_detection.py
sunray/sunray_py/static/: advanced_planning.html  advanced_planning_modular.html  app.js  build_pages.py  dashboard.html  dashboard_modular.html  example_modular.html  gps_mapping.html  index.html  info.html  info_modular.html  map_editor.html  mapping.html  mapping_modular.html  path_planning.html  settings.html  settings_modular.html  style.css  system.html  system_modular.html  tasks.html  tasks_modular.html  updates.html  updates_modular.html
sunray/sunray_py/static/components/: footer.html  header.html  sidebar.html
sunray/sunray_py/tests/: README.md  __init__.py  test_battery_integration.py  test_bumper.py  test_button_functionality.py  test_config_example.py  test_gps_safety.py  test_motor_config.py  test_motor_integration.py  test_motor_pid_placeholder.py  test_path_planning.py  test_rtk_config.py  test_smart_bumper_escape.py
sunray/sunray_py/utils/: __init__.py  lowpass_filter.py
(+58 files in other folders)
